// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KreatorProductDetails:  renders a snapshot of <KreatorProductDetails /> with mock props and sold > 0 1`] = `
<div
  className="product_details"
>
  <div
    className="product__stats"
  >
    <span
      className="product__stock"
    />
      
    <span
      className="product__stats__divider"
    >
      |
    </span>
      
    <span
      className="product__sold"
    >
      10
       Sold
    </span>
  </div>
  <div
    className="product__name"
  >
    mock Product
  </div>
  <div
    className="product__price"
  >
    <span>
      0.00
    </span>
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
  </div>
</div>
`;

exports[`KreatorProductDetails:  renders a snapshot of <KreatorProductDetails /> with mock props and sold at 0 1`] = `
<div
  className="product_details"
>
  <div
    className="product__stats"
  >
    <span
      className="product__stock"
    />
  </div>
  <div
    className="product__name"
  >
    mock Product
  </div>
  <div
    className="product__price"
  >
    <span>
      0.00
    </span>
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
  </div>
</div>
`;

exports[`KreatorProductDetails:  renders a snapshot of <KreatorProductDetails /> with no props 1`] = `
<div
  className="product_details"
>
  <div
    className="product__stats"
  />
  <div
    className="product__name"
  />
  <div
    className="product__price"
  >
    <span>
      0.00
    </span>
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
  </div>
</div>
`;
